--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">first application_411_review_1</string>
+    <string name="previous_button">Previous</string>
+    <string name="next_button">Next</string>
+    <string name="view_text">Thinking</string>
 </resources>
